# fn_overloads

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
tests/compile_fail/: async_send_bound.rs  async_send_bound.stderr  not_public.rs  not_public.stderr  unconstrained_generic.rs  unconstrained_generic.stderr
tests/pass/: async.rs  async_not_send.rs  generics.rs  no_args.rs  no_return.rs  overloads.rs  publicity.rs  single_arg.rs
