[package]
authors = ["PyPylia <me@pypylia.dev>"]
name = "fn_overloads"
description = "Create functions with varying arguments and return types. Please don't use this."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PyPylia/fn_overloads"
keywords = ["no_std"]

[lib]
name = "fn_overloads"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = {version = "2.0.38", features = ["full"]}

[dev-dependencies]
trybuild = "1.0.85"
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = ["std"]
impl_futures = []
std = []